Fix modal alignement and failed sign up

--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -16,7 +16,7 @@ body {
   line-height: 16px;
   padding: 17px;
   background-color: #302e2e;
-  color: #777;
+  color: #777777;
   text-align: center;
 }
 .navbar {
@@ -35,7 +35,7 @@ body {
   color: darkgray !important;
 }
 .navbar-brand:hover span {
-  color: red;
+  color: #ff0000;
 }
 .navbar-brand span {
   border-top: none !important;
@@ -53,7 +53,7 @@ body {
 .navbar-right li a:hover,
 .navbar-right li a:active,
 .navbar-right li a:focus {
-  border-top: 2px solid red;
+  border-top: 2px solid #ff0000;
   color: darkgray !important;
   outline: 0;
 }
@@ -65,12 +65,12 @@ body {
   width: 400px !important;
   background-color: #302e2e;
   border-color: #e00007;
-  color: darkgrey;
+  color: #a9a9a9;
   height: 35px !important;
 }
 .navbar-searchbar input:focus {
-  border-color: red;
-  box-shadow: 0 0 5px red;
+  border-color: #ff0000;
+  box-shadow: 0 0 5px #ff0000;
 }
 .navbar-searchbar button {
   height: 35px !important;
@@ -81,9 +81,9 @@ body {
 .navbar-searchbar button:hover,
 .navbar-searchbar button:active,
 .navbar-searchbar button:focus {
-  background-color: red !important;
-  box-shadow: 0 0 5px red !important;
-  border-color: red !important;
+  background-color: #ff0000 !important;
+  box-shadow: 0 0 5px #ff0000 !important;
+  border-color: #ff0000 !important;
   color: #ffffff !important;
 }
 .btn {
@@ -142,22 +142,22 @@ body {
   overflow: hidden;
 }
 .item-list .item a:link {
-  color: black;
+  color: #000000;
 }
 .item-list .item a:visited {
-  color: black;
+  color: #000000;
 }
 .item-list .item a:hover {
-  color: black;
+  color: #000000;
 }
 .item-list .item a:active {
-  color: black;
+  color: #000000;
 }
 .item-list .item a:hover {
   text-decoration: none;
 }
 .item-list .item:hover {
-  background-color: red;
+  background-color: #ff0000;
 }
 .title-tooltip {
   display: block;
@@ -190,16 +190,16 @@ body {
   background-color: #e00007;
 }
 .selected a:link {
-  color: white !important;
+  color: #ffffff !important;
 }
 .selected a:visited {
-  color: white !important;
+  color: #ffffff !important;
 }
 .selected a:hover {
-  color: white !important;
+  color: #ffffff !important;
 }
 .selected a:active {
-  color: white !important;
+  color: #ffffff !important;
 }
 #NoItemClickContainer {
   width: 100%;
@@ -318,7 +318,7 @@ body {
   border: solid 2px #e00007;
 }
 .modal-header {
-  color: #777;
+  color: #777777;
   border-bottom-color: #e00007;
   padding-bottom: 0;
   margin-bottom: 10px;
@@ -333,11 +333,11 @@ body {
 .modal-body form .input-group input {
   background-color: #302e2e;
   border-color: #e00007;
-  color: darkgrey;
+  color: #a9a9a9;
 }
 .modal-body form .input-group input:focus {
-  border-color: red;
-  box-shadow: 0 0 5px red;
+  border-color: #ff0000;
+  box-shadow: 0 0 5px #ff0000;
 }
 .modal-body form .input-group span {
   background-color: #e00007;
@@ -359,9 +359,9 @@ body {
 .modal-body form button:hover,
 .modal-body form button:active,
 .modal-body form button:focus {
-  background-color: red !important;
-  box-shadow: 0 0 5px red !important;
-  border-color: red !important;
+  background-color: #ff0000 !important;
+  box-shadow: 0 0 5px #ff0000 !important;
+  border-color: #ff0000 !important;
   color: #ffffff !important;
 }
 .modal-body form button span {
@@ -370,7 +370,7 @@ body {
 .modal-body .alert {
   border: solid thin #e00007;
   background-color: #e00007;
-  color: darkgrey;
+  color: #a9a9a9;
   font-size: 12px;
   padding: 7px 7px 7px 12px;
   margin: 1px 0 0 0;
@@ -395,12 +395,12 @@ body {
 #DatePicker input {
   background-color: #302e2e;
   border-color: #e00007;
-  color: darkgrey;
+  color: #a9a9a9;
   padding: 4px 12px;
 }
 #DatePicker input:focus {
-  border-color: red;
-  box-shadow: 0 0 5px red;
+  border-color: #ff0000;
+  box-shadow: 0 0 5px #ff0000;
 }
 .ui-datepicker {
   z-index: 999999 !important;
@@ -427,10 +427,6 @@ body {
 #title {
   text-align: center;
 }
-form {
-  width: 200px;
-  margin: 0 !important;
-}
 #productImage {
   width: 500px;
   margin-bottom: 10px;
@@ -439,12 +435,9 @@ form {
   width: 100%;
   height: 300px;
 }
-.btn {
-  margin-left: 0;
-}
 #tabs li.active a {
   background-color: #e00007;
-  color: darkgrey;
+  color: #a9a9a9;
 }
 #tabs li a {
   color: #302e2e;
@@ -453,6 +446,13 @@ form {
 #form {
   display: flex;
   flex-direction: row;
+}
+#form form {
+  width: 200px;
+  margin: 0 !important;
+}
+#form form .btn {
+  margin-left: 0;
 }
 .tab-pane {
   min-height: 300px;
