--- a/webroot/css/product.css
+++ b/webroot/css/product.css
@@ -1,10 +1,6 @@
 #title {
   text-align: center;
 }
-form {
-  width: 200px;
-  margin: 0 !important;
-}
 #productImage {
   width: 500px;
   margin-bottom: 10px;
@@ -12,9 +8,6 @@ form {
 #productIframe {
   width: 100%;
   height: 300px;
-}
-.btn {
-  margin-left: 0;
 }
 #tabs li.active a {
   background-color: #e00007;
@@ -27,6 +20,13 @@ form {
 #form {
   display: flex;
   flex-direction: row;
+}
+#form form {
+  width: 200px;
+  margin: 0 !important;
+}
+#form form .btn {
+  margin-left: 0;
 }
 .tab-pane {
   min-height: 300px;
